--- a/pstore/settings.py.template
+++ b/pstore/settings.py.template
@@ -64,8 +64,13 @@ if DEBUG:
     LOGGING = {
         'version': 1,
         'disable_existing_loggers': True,
+        'formatters': {
+            'simple': {'format': '[%(asctime)s] %(levelname)s %(name)s: '
+                       '%(message)s', 'datefmt': '%d/%b/%Y %H:%M:%S'},
+        },
         'handlers': {
-            'console': {'level': 'DEBUG', 'class': 'logging.StreamHandler'},
+            'console': {'level': 'DEBUG', 'class': 'logging.StreamHandler',
+                        'formatter': 'simple'},
         },
         'loggers': {
             'django': {'handlers': ('console',), 'level': 'INFO'},
