--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,25 @@
-# This is a pip install -r requirements file.
+# This is a pip install -r requirements file for the key store.
 
 # For installing the CLI interface only, using apt is probably best:
 #
 # apt-get install python-gpgme                  # enc=gpg
 # apt-get install python-crypto python-pyasn1   # enc=sshrsa (old)
 
-## For the back-end / key store ##
+# For installing the server, you need the above, and this:
+#
+# apt-get install python-mysqldb
+
+# Uncomment items below if you're not using apt. See also the
+# --system-site-packages mkvirtualenv flag.)
 
 Django>=1.3,<1.5	# python-django (built with 1.4, 1.3 works)
-MySQL-python>=1.2.4	# python-mysqldb (requires libmysqlclient-dev)
+#MySQL-python>=1.2.4	# python-mysqldb (requires: python-dev libmysqlclient-dev)
 # 1.2.4 is needed for tests, older is fine for production,
 # or you could choose a different database backend...
 
 # for gpg key type:
-pygpgme>=0.1		# python-gpgme (requires libgpgme11-dev)
+#pygpgme>=0.1		# python-gpgme (requires: python-dev libgpgme11-dev)
 
 # for sshrsa key type:
-pyasn1>=0.0.8a		# python-pyasn1
-pycrypto>=2.0.1		# python-crypto
+#pyasn1>=0.0.8a		# python-pyasn1
+#pycrypto>=2.0.1	# python-crypto
