build: Alter scope.yml include/exclude. Did not work as expected?

--- a/.scope.yml
+++ b/.scope.yml
@@ -13,7 +13,11 @@ languages:
       exclude:
         - /contrib/.*
         - /pstore/tests/.*
+        # TEST TEST
+        - /pstorelib/.*
 
     test:
       include:
         - /pstore/tests/.*
+      exclude:
+        - /contrib/.*
