build: Alter BCH scope file again after fixes in BCH.

--- a/.scope.yml
+++ b/.scope.yml
@@ -12,12 +12,8 @@ languages:
         - /bin/pstore
       exclude:
         - /contrib/.*
-        - /pstore/tests/.*
-        # TEST TEST
-        - /pstorelib/.*
+        - /setups.py
 
     test:
       include:
         - /pstore/tests/.*
-      exclude:
-        - /contrib/.*
