--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,8 @@ Django>=1.3,<1.5	# python-django (built with 1.4, 1.3 works)
 # or you could choose a different database backend...
 
 # for gpg key type:
+#gpg>=1.10		# python-gpg
+# (or.. old/obsolete)
 #pygpgme>=0.1		# python-gpgme (requires: python-dev libgpgme11-dev)
 
 # for sshrsa key type:
