--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 # For installing the CLI interface only, using apt is probably best:
 #
 # apt-get install python3-gpg                     # enc=gpg
-# apt-get install python3-crypto python3-pyasn1   # enc=sshrsa (old)
+# apt-get install python3-pycryptodome python3-pyasn1   # enc=sshrsa (old)
 
 # For installing the server, you need the above, and this:
 #
@@ -12,12 +12,12 @@
 # Uncomment items below if you're not using apt. See also the
 # --system-site-packages mkvirtualenv flag.)
 
-Django>=1.3,<1.5	# python3-django (built with 1.4, 1.3 works)
+Django>=3.1,<3.2
 #mysqlclient
 
 # for gpg key type:
-gpg>=1.10		# python-gpg
+gpg>=1.10		# python3-gpg
 
 # for sshrsa key type:
 pyasn1>=0.0.8a		# python3-pyasn1
-pycrypto>=2.0.1		# python3-crypto
+pycryptodome>=3.10	# python3-pycryptodome
