--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@
 # For installing the CLI interface only, using apt is probably best:
 #
 # apt-get install python3-gpg                     # enc=gpg
-# apt-get install python3-pycryptodome python3-pyasn1   # enc=sshrsa (old)
 
 # For installing the server, you need the above, and this:
 #
@@ -13,11 +12,7 @@
 # --system-site-packages mkvirtualenv flag.)
 
 Django>=3.1,<3.2
-#mysqlclient
+#mysqlclient     # python3-mysqldb
 
 # for gpg key type:
-gpg>=1.10		# python3-gpg
-
-# for sshrsa key type:
-pyasn1>=0.0.8a		# python3-pyasn1
-pycryptodome>=3.10	# python3-pycryptodome
+gpg>=1.10        # python3-gpg
